# auto_car

./: AUTONOMOUS_DRIVING_GUIDE.md  DETECT_PACKAGE_GUIDE.md  MAPPING_GUIDE.md  default.rviz  gui.html  infoProje.md  readme.md  robot.urdf  ros2.md
control/: package.xml  setup.py
control/control/: motor_node.py
custom_actions/: CMakeLists.txt  package.xml
custom_msgs/: CMakeLists.txt  package.xml
custom_srvs/: CMakeLists.txt  package.xml
detect/: package.xml  setup.py
detect/config/: a1.py  example_map.pgm  example_map.yaml  mapping_visualization.rviz
detect/detect/: autonomous_driver_node.py  behavior_manager_node.py  control_interface_node.py  map_server_node.py  obstacle_node.py  path_planner_node.py  slam_node.py  tf_publisher_node.py
detect/launch/: autonomous_driving.launch.py  map_server.launch.py  slam.launch.py  visualization.launch.py
get/: package.xml  setup.cfg  setup.py
get/get/: back_camera_node.py  encoder_node.py  lidar_node.py  rgbd_camera_node.py  targeting_camera_node.py
get_imu/: package.xml  setup.cfg  setup.py
get_imu/get_imu/: get_imu_node.py
get_lidar/: package.xml  setup.cfg  setup.py
get_lidar/get_lidar/: __init__.py  get_lidar_node.py
get_rgbd/: package.xml  setup.cfg  setup.py
get_rgbd/get_rgbd/: get_rgbd_node.py
manage/: package.xml  setup.cfg  setup.py
plan/: package.xml  setup.cfg  setup.py
ui/: package.xml  setup.py
